--- a/WMS/Views/Theme/Default/Products/Create.cshtml
+++ b/WMS/Views/Theme/Default/Products/Create.cshtml
@@ -146,7 +146,7 @@
                 @Html.Label("Product Attribute", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                         @Html.ListBox("AttributeIds", new MultiSelectList(ViewBag.AttributeGroups, "AttributeId", "AttributeName"), new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Atttribute" })
-                  
+
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
@@ -583,7 +583,7 @@
                     </div>
                 </div>
             </div>
-            <div class="input-group h-100 justify-content-center align-items-center simpleDiv">
+            <div class="input-group h-100 justify-content-center align-items-center simpleDiv" style=@(Model.ProductType!=Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute?"":"display:none")>
                 @Html.Label("Product Attributes", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     <div class="col-11 p-0 mt-1 pull-left">
