--- a/WMS/Views/Theme/Default/Products/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Products/Edit.cshtml
@@ -117,9 +117,16 @@
             else {
                 $(".associated-items").show();
             }
+        });
 
-
-
+        $("#ProductType").change(function () {
+            var kit = $('#ProductType :selected').val();
+            if (kit == "5") {
+                $(".product-attributes").hide();
+            }
+            else {
+                $(".product-attributes").show();
+            }
         });
     });
 </script>
@@ -156,7 +163,7 @@
         <ul>
             <li><a href="#product-detail">Product Detail</a></li>
             <li><a href="#product-codes">Product Codes</a></li>
-            <li><a href="#product-attributes">Product Attributes</a></li>
+            <li><a href="#product-attributes" class="product-attributes" style=@(Model.ProductType!=Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute?"":"display:none")>Product Attributes</a></li>
             <li><a href="#product-locations">Product Locations</a></li>
             <li><a href="#product-inventory">Inventory</a></li>
             <li><a href="#product-associated-items" class="associated-items" style=@(Model.ProductType != ProductKitTypeEnum.Simple?"":"display:none")>Associated Items</a></li>
